2007-06-27  Dustin J. Mitchell <dustin@cs.uchicago.edu>
	* fix 'load' and 'unload' to work on arbitrary directories